布局修改完成，需要加自定义js

--- a/html/tag.html
+++ b/html/tag.html
@@ -60,9 +60,24 @@
 				<button type="sumbit" class="btn btn-default">添加</button>
 			</div>
 		</form>
-		<ul>
-			<li class="alert d9edf7">
-			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aira-hidden="true">&times;</span></button>
+
+		<div class="container tabTitle clearfix">
+			<div class="alert bg-info title ">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aira-hidden="true">&times;</span></button>
+				前端技术
+			</div>
+			<div class="alert bg-info title">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aira-hidden="true">&times;</span></button>
+				sTrong
+			</div>
+			<div class="alert bg-info title">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aira-hidden="true">&times;</span></button>
+				web前端技术
+			</div>
+		</div>
+		<!-- <ul>
+			<li class=" d9edf7">
+			
 				<div class="panel-body">前端技术</div>
 			</li>
 			<li class="alert d9edf7">
@@ -73,7 +88,7 @@
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aira-hidden="true">&times;</span></button>
 				<div class="panel-body">web前端技术</div>
 			</li>
-		</ul>
+		</ul> -->
 	</div>
 	
 	<div class="foot container-fluid">
