--- a/html/user_seach.html
+++ b/html/user_seach.html
@@ -57,8 +57,8 @@
 				<h3>用户搜索</h3>
 			</div>
 			<ul class="nav nav-tabs">
-				<li><a href="#">用户管理</a></li>
-				<li class="active"><a href="#">用户搜索</a></li>
+				<li><a href="./user.html">用户管理</a></li>
+				<li class="active"><a href="javascript:void(0)">用户搜索</a></li>
 				<li><a href="#">用户添加</a></li>
 			</ul>
 			<div class="tab-content user-content">
